# Crawlix

./: .gitignore  CONTRIBUTING.md  INDEX.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.cursor/plans/: crawlix_pure_python_plan_ffdcc41d.plan.md  crawlix_ui_ux_shell_d5eb977f.plan.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9b949aa9c11d_initial_schema.py  c7e2a1b4f9d0_add_page_crawl_depth.py  d4f8a2c1b0e3_add_crawl_snapshots.py  e5a1c2d3b4f0_add_project_seo_context_json.py
docs/: WorkLog-3-5-2026.md  WorkLog-4-5-2026.md  WorkLog-7-5-2026.md  architecture.md  changelog.md  citation-placeholders.md  keywords-targeting-and-templates.md  known-limitations.md  local-pack-roadmap.md  next-refactors-and-risks.md  packaging.md  roadmap-phases.md  setup.md
docs/ui/: dashboard-action-model.md  design-tokens.md  full-ui-redesign-backlog.md  glossary.md  interaction-contracts.md  issue-taxonomy-and-priority.md  milestone-checklists.md  overview.md  theme-and-progress.md
docs/user-guide/: README.md  journeys.md
resources/: citation_sources_default.yaml
src/crawlix/: __main__.py  config.py  main.py  paths.py
tests/integration/: test_migrate.py
tests/unit/: test_actions_controller.py  test_audit.py  test_audit_controller.py  test_citation_placeholders.py  test_citations_controller.py  test_context_menu_controller.py  test_crawl_controller.py  test_crawl_overview.py  test_crawl_snapshots.py  test_dashboard_action_runner.py  test_dashboard_controller.py  test_dashboard_routes_controller.py  test_design_tokens.py  test_exporters.py  (+22 more)
(+91 files in other folders)
