[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlix"
version = "0.1.0"
description = "Local-first desktop SEO workstation (PyQt6)"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "Crawlix contributors" }]
dependencies = [
  "PyQt6>=6.6",
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.13",
  "httpx>=0.27",
  "selectolax>=0.3",
  "rapidfuzz>=3.6",
  "matplotlib>=3.8",
  "pandas>=2.1",
  "argon2-cffi>=23.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "ruff>=0.4",
]

[project.scripts]
crawlix = "crawlix.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
